#117: Homepage - Add text next to video.

--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -431,3 +431,13 @@ body.front {
     }
   }
 }
+
+/* ===== Homepage Welcome =====*/
+
+.homepage-welcome {
+
+  iframe {
+    margin-left: 5px;
+    float: right;
+  }
+}
