--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5322,6 +5322,11 @@ body.page-publications .publications-list > ul {
     body.page-publications .publications-list > ul > li:hover {
       background: #f5f5f5; }
 
+/* ===== Homepage Welcome =====*/
+.homepage-welcome iframe {
+  margin-left: 5px;
+  float: right; }
+
 /* ===== General ===== */
 html, body {
   font-family: 'Lato', sans-serif;
