Remove the block.

--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -474,3 +474,11 @@ fieldset[disabled] .btn-amethyst.active {
 .main-container {
   margin-top: 20px;
 }
+
+.navbar-default {
+
+  .navbar-brand {
+    color: #ffffff;
+    font-size: 28px;
+  }
+}
