Fix error style.

--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_node.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_node.scss
@@ -3,7 +3,7 @@ body.node-type-page {
   .what-is-ibli {
 
     .main-image {
-      background: url('../images/what_is_ibli.png') no-repeat;
+      background: url("../images/what_is_ibli.png") no-repeat;
       width: 960px;
       height: 212px;
       margin-top: 5px;
