--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -9,7 +9,7 @@ body.front {
   #wrap,
   #hp-slider {
     height: 480px;
-    background: url('../images/bg3.jpg') no-repeat center center;
+    background: url(../images/bg3.jpg) no-repeat center center;
     background-size: cover;
     filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/bg3.jpg', sizingMethod='scale');
     -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/bg3.jpg', sizingMethod='scale')";
