--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5012,7 +5012,7 @@ body.front {
   body.front #wrap,
   body.front #hp-slider {
     height: 480px;
-    background: url("../images/bg3.jpg") no-repeat center center;
+    background: url(../images/bg3.jpg) no-repeat center center;
     background-size: cover;
     filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/bg3.jpg', sizingMethod='scale');
     -ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../images/bg3.jpg', sizingMethod='scale')";
@@ -5307,7 +5307,7 @@ body.front {
   float: right; }
 
 body.node-type-page .what-is-ibli .main-image {
-  background: url("../images/what_is_ibli.png") no-repeat;
+  background: url(../images/what_is_ibli.png) no-repeat;
   width: 100%;
   height: 212px;
   margin-top: 5px;
