--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5301,9 +5301,14 @@ body.front {
         color: #555;
         min-width: 130px; }
 
+/* ===== Homepage Welcome =====*/
+.homepage-welcome iframe {
+  margin-left: 5px;
+  float: right; }
+
 body.node-type-page .what-is-ibli .main-image {
   background: url(../images/what_is_ibli.png) no-repeat;
-  width: 1140px;
+  width: 100%;
   height: 212px;
   margin-top: 5px;
   margin-bottom: 20px; }
@@ -5321,11 +5326,6 @@ body.page-publications .publications-list > ul {
       border-top: 1px solid #EEE; }
     body.page-publications .publications-list > ul > li:hover {
       background: #f5f5f5; }
-
-/* ===== Homepage Welcome =====*/
-.homepage-welcome iframe {
-  margin-left: 5px;
-  float: right; }
 
 /* ===== General ===== */
 html, body {
@@ -5355,6 +5355,9 @@ header.navbar {
   font-family: 'Lato', sans-serif;
   text-transform: uppercase;
   font-size: 12px; }
+  header.navbar .navbar-brand {
+    color: #ffffff;
+    font-size: 28px; }
   header.navbar ul.nav li {
     cursor: pointer; }
     header.navbar ul.nav li.dropdown ul.dropdown-menu {
