--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_node.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_node.scss
@@ -4,7 +4,7 @@ body.node-type-page {
 
     .main-image {
       background: url(../images/what_is_ibli.png) no-repeat;
-      width: 1140px;
+      width: 100%;
       height: 212px;
       margin-top: 5px;
       margin-bottom: 20px;
