--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -43,6 +43,11 @@ header.navbar {
   text-transform: uppercase;
   font-size: 12px;
 
+  .navbar-brand {
+    color: #ffffff;
+    font-size: 28px;
+  }
+
   ul.nav {
 
     li {
