Improving premium rates table header

--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -3,6 +3,7 @@
 @import "pages/_homepage.scss";
 @import "pages/_node.scss";
 @import "pages/_publications.scss";
+@import "pages/_table.scss";
 
 /* ===== General ===== */
 
