--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -2134,6 +2134,7 @@ input[type="button"].btn-block {
   font-family: 'Glyphicons Halflings';
   src: url("bootstrap/glyphicons-halflings-regular.eot");
   src: url("bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg"); }
+
 .glyphicon {
   position: relative;
   top: 1px;
@@ -3914,12 +3915,14 @@ a.thumbnail.active {
 
   to {
     background-position: 0 0; } }
+
 @keyframes progress-bar-stripes {
   from {
     background-position: 40px 0; }
 
   to {
     background-position: 0 0; } }
+
 .progress {
   overflow: hidden;
   height: 20px;
@@ -4819,7 +4822,7 @@ button.close {
     border-radius: 10px;
     cursor: pointer;
     background-color: #000 \9;
-    background-color: transparent; }
+    background-color: rgba(0, 0, 0, 0); }
   .carousel-indicators .active {
     margin: 0;
     width: 12px;
@@ -4900,6 +4903,7 @@ button.close {
 
 @-ms-viewport {
   width: device-width; }
+
 .visible-xs, .visible-sm, .visible-md, .visible-lg {
   display: none !important; }
 
@@ -5323,6 +5327,19 @@ body.page-publications .publications-list > ul {
       border-top: 1px solid #EEE; }
     body.page-publications .publications-list > ul > li:hover {
       background: #f5f5f5; }
+
+table th.toggle-hideable {
+  transform: rotate(75deg);
+  transition: 0.5s;
+  text-align: center; }
+  table th.toggle-hideable a {
+    display: block;
+    margin-left: -75px; }
+  table th.toggle-hideable.active {
+    transform: none;
+    margin-top: 0; }
+    table th.toggle-hideable.active a {
+      margin-left: 0; }
 
 /* ===== General ===== */
 html, body {
