Fixing design in partners page.

--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -490,3 +490,10 @@ fieldset[disabled] .btn-amethyst.active {
 .top-zero {
   margin-top: 0;
 }
+
+.panel-ibli-partners {
+
+  .row {
+    margin-bottom: 10px;
+  }
+}
