--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -4,6 +4,7 @@
 @import "pages/_node.scss";
 @import "pages/_publications.scss";
 @import "pages/_table.scss";
+@import "pages/_past_index_map";
 
 /* ===== General ===== */
 
