--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_past_index_map.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_past_index_map.scss
@@ -1,13 +1,12 @@
 .past-index-map {
 
   .btn-save,
-  #spinner {
+  #spinner,
+  #download_link {
     margin-top: 15px;
   }
 
-  #spinner,
   #download_link {
-    display: none;
     font-size: 22px;
   }
 }
