--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5284,17 +5284,24 @@ body.page-publications .publications-list > ul {
     body.page-publications .publications-list > ul > li:hover {
       background: #f5f5f5; }
 
-table th.toggle-hideable {
+table thead tr th.toggle-hideable {
   transform: rotate(75deg);
   text-align: center; }
-  table th.toggle-hideable a {
+  table thead tr th.toggle-hideable a {
     display: block;
     margin-left: -75px; }
-  table th.toggle-hideable.active {
+  table thead tr th.toggle-hideable.active {
     transform: none;
     margin-top: 0; }
-    table th.toggle-hideable.active a {
+    table thead tr th.toggle-hideable.active a {
       margin-left: 0; }
+table tbody tr td.premium {
+  padding: 0; }
+  table tbody tr td.premium span {
+    padding: 8px;
+    display: block; }
+  table tbody tr td.premium span {
+    background-color: #FFFFED; }
 
 .past-index-map .btn-save,
 .past-index-map #spinner,
