--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5325,9 +5325,8 @@ table th.toggle-hideable {
     .main-container .company.logos .img-wrapper,
     .main-container .logos.logos .img-wrapper {
       border: 1px solid #515151;
-      height: 180px;
-      display: table-cell;
-      vertical-align: middle; }
+      height: 200px;
+      line-height: 190px; }
 
 /* ===== General ===== */
 html, body {
