--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_get_ibli.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_get_ibli.scss
@@ -25,9 +25,8 @@
 
       .img-wrapper {
         border: 1px solid #515151;
-        height: 180px;
-        display: table-cell;
-        vertical-align: middle;
+        height: 200px;
+        line-height: 190px;
       }
     }
   }
