--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -396,9 +396,9 @@ body.front {
 /* ======== Payout box on map =======*/
 
 #payouts-sales-periods {
-  background: #fdfdfd;
+  background: #FCFCFC;
   padding: 10px;
-  opacity: 0.95;
+  opacity: 0.90;
 
   p {
     font-weight: bold;
