--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_past_index_map.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_past_index_map.scss
@@ -1,12 +1,22 @@
 .past-index-map {
+  > div {
+  position: relative;
 
-  .btn-save,
-  #spinner,
-  #download_link {
-    margin-top: 15px;
-  }
+    .period-select {
+      position: absolute;
+      top: 5px;
+      right: 5px;
+      z-index: 10000;
+    }
 
-  #download_link {
-    font-size: 22px;
+    .btn-save,
+    #spinner,
+    #download_link {
+      margin-top: 15px;
+    }
+
+    #download_link {
+      font-size: 22px;
+    }
   }
 }
