Update: Adding calculating logic and design.

--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5800,6 +5800,22 @@ fieldset[disabled] .btn-amethyst.active {
     display: none !important; }
   .angular-leaflet-map .leaflet-popup {
     bottom: 0 !important; }
+    .angular-leaflet-map .leaflet-popup .calculator-form .input-group {
+      width: 100%; }
+      .angular-leaflet-map .leaflet-popup .calculator-form .input-group .input-group-addon {
+        border: 0 none;
+        background: none;
+        padding: 12px 25px; }
+        .angular-leaflet-map .leaflet-popup .calculator-form .input-group .input-group-addon.cow {
+          background: url("../images/cow.png") 0 0 no-repeat; }
+        .angular-leaflet-map .leaflet-popup .calculator-form .input-group .input-group-addon.camel {
+          background: url("../images/camel.png") 0 0 no-repeat; }
+        .angular-leaflet-map .leaflet-popup .calculator-form .input-group .input-group-addon.goat {
+          background: url("../images/goat.png") 0 0 no-repeat; }
+      .angular-leaflet-map .leaflet-popup .calculator-form .input-group input {
+        width: 100%;
+        margin-bottom: 5px;
+        float: right; }
 
 .panel-ibli-partners .row {
   margin-bottom: 10px; }
