Replace sheep with goat.

--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -570,8 +570,8 @@ fieldset[disabled] .btn-amethyst.active {
             background: url("../images/camel.png") 0 0 no-repeat;
           }
 
-          &.sheep {
-            background: url("../images/sheep.png") 0 0 no-repeat;
+          &.goat {
+            background: url("../images/goat.png") 0 0 no-repeat;
           }
         }
 
