--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -582,6 +582,7 @@ fieldset[disabled] .btn-amethyst.active {
           padding: 0 0 0 5px;
           height: 28px;
           font-size: 10px;
+          min-width: 100px;
         }
       }
     }
