Pull the RSS feed from the blog into the LAST UPDATES 'news' tab.

--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5471,6 +5471,11 @@ footer {
   margin-top: 0px;
   overflow: inherit; }
 
+#news {
+  overflow: auto;
+  width: 360px;
+  height: 360px; }
+
 /* ===== Buttons ===== */
 .btn {
   border-radius: 0; }
