--- a/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/pages/_homepage.scss
@@ -311,31 +311,24 @@ body.front {
   .thumbnail {
     position: relative;
   }
-  .thumbnail .visit {
+  .thumbnail .play-video {
     position: absolute;
+    background: url("../images/play_video.png") 0 0 no-repeat;
     opacity: 0;
-    width: 100%;
+    width: 45px;
+    height: 45px;
     text-align: center;
-    top: 80px;
+    top: 57px;
+    left: 42%;
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
   }
-  .thumbnail:hover .visit {
+  .thumbnail:hover .play-video {
     opacity: 1;
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s;
-  }
-  .thumbnail .visit a {
-    color: #FFF;
-    text-transform: uppercase;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 10px 20px;
-  }
-  .thumbnail .visit a:hover {
-    color: #FFF;
-    text-decoration: none;
   }
 
 
