Change the style of the colorbox.

--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5386,6 +5386,15 @@ header.navbar {
       background-color: #EEEEEE;
       color: #515151; }
 
+/* ===== Colorbox ==== */
+#colorbox, #colorbox div {
+  overflow: visible !important;
+  border-radius: 0 !important; }
+  #colorbox #cboxWrapper, #colorbox div #cboxWrapper {
+    border-radius: 0; }
+    #colorbox #cboxWrapper #cboxLoadedContent, #colorbox div #cboxWrapper #cboxLoadedContent {
+      height: 110% !important; }
+
 /* ===== Footer ===== */
 footer {
   margin-top: 60px;
