--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5206,28 +5206,23 @@ body.front {
     background-color: #9B59B6; }
   body.front .thumbnail {
     position: relative; }
-  body.front .thumbnail .visit {
+  body.front .thumbnail .play-video {
     position: absolute;
+    background: url("../images/play_video.png") 0 0 no-repeat;
     opacity: 0;
-    width: 100%;
+    width: 45px;
+    height: 45px;
     text-align: center;
-    top: 80px;
+    top: 57px;
+    left: 42%;
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s; }
-  body.front .thumbnail:hover .visit {
+  body.front .thumbnail:hover .play-video {
     opacity: 1;
     transition: all 0.3s;
     -webkit-transition: all 0.3s;
     -moz-transition: all 0.3s; }
-  body.front .thumbnail .visit a {
-    color: #FFF;
-    text-transform: uppercase;
-    background: rgba(0, 0, 0, 0.5);
-    padding: 10px 20px; }
-  body.front .thumbnail .visit a:hover {
-    color: #FFF;
-    text-decoration: none; }
   body.front .ibli-on-the-ground .thumbnail {
     padding: 0;
     border: 0;
@@ -5390,6 +5385,20 @@ header.navbar {
     header.navbar ul.nav li.dropdown.open .dropdown-toggle {
       background-color: #EEEEEE;
       color: #515151; }
+
+/* ===== Colorbox ==== */
+#colorbox {
+  overflow: visible !important;
+  border-radius: 0 !important;
+  margin: 0;
+  background: white; }
+  #colorbox #cboxWrapper {
+    border-radius: 0; }
+    #colorbox #cboxWrapper #cboxLoadedContent {
+      height: 110% !important; }
+    #colorbox #cboxWrapper button#cboxClose {
+      top: -15px;
+      right: -14px; }
 
 /* ===== Footer ===== */
 footer {
