--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -131,9 +131,16 @@ footer {
     }
   }
 
+  .form-control {
+    float: left;
+    width: 79%;
+  }
+
   .btn-default {
     color: #fff;
     background: none;
+    float: left;
+    height: 34px;
 
     &:hover {
       color: #3E7A8C;
