--- a/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
+++ b/ibli/themes/custom/bootstrap_subtheme/sass/style.scss
@@ -143,9 +143,9 @@ footer {
     height: 34px;
 
     &:hover {
+      float: left;
       color: #3E7A8C;
       background: #fff;
-      font-weight: bold;
       border: 1px solid #fff;
     }
   }
