--- a/ibli/themes/custom/bootstrap_subtheme/css/style.css
+++ b/ibli/themes/custom/bootstrap_subtheme/css/style.css
@@ -5418,13 +5418,18 @@ footer {
     footer .headline h3 {
       text-transform: uppercase;
       font-weight: 100; }
+  footer .form-control {
+    float: left;
+    width: 79%; }
   footer .btn-default {
     color: #fff;
-    background: none; }
+    background: none;
+    float: left;
+    height: 34px; }
     footer .btn-default:hover {
+      float: left;
       color: #3E7A8C;
       background: #fff;
-      font-weight: bold;
       border: 1px solid #fff; }
   footer .form-control {
     border: white; }
@@ -5840,10 +5845,8 @@ fieldset[disabled] .btn-amethyst.active {
       text-align: right; }
       .angular-leaflet-map .leaflet-popup .calculated-sum .insurer {
         margin: 9px 5px 0 0;
-        float: left;
-      }
+        float: left; }
       .angular-leaflet-map .leaflet-popup .calculated-sum .sum {
-        font-size:30px;
-      }
+        font-size: 30px; }
 
 /*# sourceMappingURL=style.css.map */
